--- a/package.json
+++ b/package.json
@@ -51,12 +51,14 @@
 		"stylelint-config-standard-scss": "^3.0.0",
 		"stylelint-order": "^5.0.0",
 		"typograf": "^6.14.1",
+		"vanillajs-datepicker": "^1.3.4",
 		"webpack": "^5.65.0",
 		"webpack-stream": "^7.0.0"
 	},
 	"dependencies": {
 		"@popperjs/core": "^2.11.2",
 		"aos": "^2.3.4",
+		"axios": "^1.5.0",
 		"graph-modal": "^1.0.4",
 		"graph-tabs": "^1.0.0",
 		"gsap": "^3.11.5",
